--- a/src/app.css
+++ b/src/app.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   min-height: 100vh;
   height: 100%;
-  cursor: url(normalselect.cur), auto;
+  cursor: url(/icons/normalselect.cur), auto;
   background-color: rgb(40, 40, 40);
   font-family: Gordita, Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
