--- a/src/app.css
+++ b/src/app.css
@@ -2,8 +2,9 @@ body {
   margin: 0;
   min-height: 100vh;
   height: 100%;
+  overflow: hidden;
   cursor: url(/icons/normalselect.cur), auto;
-  background-color: rgb(40, 40, 40);
+  background-color: #282828;
   font-family: Gordita, Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
