--- a/src/components/Background.css
+++ b/src/components/Background.css
@@ -1,8 +1,9 @@
 .grid-box {
   position: absolute;
   background-color: rgb(255, 255, 255);
-  height: 32px;
-  width: 32px;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+  height: 16px;
+  width: 16px;
 }
 
 .cursor-box {
@@ -24,7 +25,7 @@
 
 .cursor-box::before {
   background: radial-gradient(
-    30px circle at var(--mouse-x) var(--mouse-y),
+    20px circle at var(--mouse-x) var(--mouse-y),
     rgb(255, 255, 255),
     transparent 100%
   );
@@ -33,8 +34,8 @@
 
 .cursor-box::after {
   background: radial-gradient(
-    70px circle at var(--mouse-x) var(--mouse-y),
-    rgba(43, 43, 43, 0.23),
+    40px circle at var(--mouse-x) var(--mouse-y),
+    rgba(23, 23, 23, 0.23),
     transparent 100%
   );
   z-index: 3;
@@ -48,7 +49,7 @@
   align-items: center;
   justify-content: center;
   padding: 18px;
-  background-color: rgb(40, 40, 40);
+  background-color: rgb(8, 8, 8);
   border-radius: inherit;
   z-index: 2;
 }
