--- a/src/components/Background.css
+++ b/src/components/Background.css
@@ -6,11 +6,15 @@
   width: 16px;
 }
 
+.cursor {
+  opacity: 0;
+}
+
 .cursor-box {
   position: absolute;
   background-color: transparent;
-  height: 32px;
-  width: 32px;
+  height: 16px;
+  width: 16px;
 }
 
 .cursor-box::before,
@@ -48,8 +52,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 18px;
+  padding: 8px;
   background-color: rgb(8, 8, 8);
   border-radius: inherit;
   z-index: 2;
+}
+
+.background {
+  position: absolute;
+  z-index: 1;
 }
